// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tesselate assembles U piece left 1`] = `
Array [
  3750,
]
`;

exports[`tesselate assembles U piece left 2`] = `
Array [
  Array [
    Array [
      50,
      25,
    ],
    Array [
      25,
      25,
    ],
    Array [
      25,
      75,
    ],
    Array [
      50,
      75,
    ],
    Array [
      50,
      100,
    ],
    Array [
      0,
      100,
    ],
    Array [
      0,
      0,
    ],
    Array [
      50,
      0,
    ],
  ],
]
`;

exports[`tesselate assembles U piece right 1`] = `
Array [
  -3750,
]
`;

exports[`tesselate assembles U piece right 2`] = `
Array [
  Array [
    Array [
      50,
      25,
    ],
    Array [
      75,
      25,
    ],
    Array [
      75,
      75,
    ],
    Array [
      50,
      75,
    ],
    Array [
      50,
      100,
    ],
    Array [
      100,
      100,
    ],
    Array [
      100,
      0,
    ],
    Array [
      50,
      0,
    ],
  ],
]
`;

exports[`tesselate assembles U pieces 1`] = `
Array [
  1250,
  1250,
]
`;

exports[`tesselate assembles U pieces 2`] = `
Array [
  Array [
    Array [
      50,
      0,
    ],
    Array [
      100,
      0,
    ],
    Array [
      100,
      25,
    ],
    Array [
      50,
      25,
    ],
  ],
  Array [
    Array [
      50,
      75,
    ],
    Array [
      100,
      75,
    ],
    Array [
      100,
      100,
    ],
    Array [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate assembles complex piece 1`] = `
Array [
  935,
  4,
  450,
  40,
]
`;

exports[`tesselate assembles complex piece 2`] = `
Array [
  Array [
    Array [
      50,
      95,
    ],
    Array [
      95,
      95,
    ],
    Array [
      95,
      5,
    ],
    Array [
      50,
      5,
    ],
    Array [
      50,
      4,
    ],
    Array [
      55,
      4,
    ],
    Array [
      55,
      1,
    ],
    Array [
      50,
      1,
    ],
    Array [
      50,
      0,
    ],
    Array [
      100,
      0,
    ],
    Array [
      100,
      100,
    ],
    Array [
      50,
      100,
    ],
  ],
  Array [
    Array [
      50,
      2,
    ],
    Array [
      54,
      2,
    ],
    Array [
      54,
      3,
    ],
    Array [
      50,
      3,
    ],
  ],
  Array [
    Array [
      50,
      70,
    ],
    Array [
      70,
      70,
    ],
    Array [
      70,
      30,
    ],
    Array [
      50,
      30,
    ],
    Array [
      50,
      25,
    ],
    Array [
      75,
      25,
    ],
    Array [
      75,
      75,
    ],
    Array [
      50,
      75,
    ],
  ],
  Array [
    Array [
      50,
      54,
    ],
    Array [
      55,
      54,
    ],
    Array [
      55,
      53,
    ],
    Array [
      50,
      53,
    ],
    Array [
      50,
      52,
    ],
    Array [
      55,
      52,
    ],
    Array [
      55,
      51,
    ],
    Array [
      50,
      51,
    ],
    Array [
      50,
      50,
    ],
    Array [
      60,
      50,
    ],
    Array [
      60,
      55,
    ],
    Array [
      50,
      55,
    ],
  ],
]
`;

exports[`tesselate assembles spiral piece 1`] = `
Array [
  950,
  450,
  50,
]
`;

exports[`tesselate assembles spiral piece 2`] = `
Array [
  Array [
    Array [
      50,
      95,
    ],
    Array [
      95,
      95,
    ],
    Array [
      95,
      5,
    ],
    Array [
      50,
      5,
    ],
    Array [
      50,
      0,
    ],
    Array [
      100,
      0,
    ],
    Array [
      100,
      100,
    ],
    Array [
      50,
      100,
    ],
  ],
  Array [
    Array [
      50,
      70,
    ],
    Array [
      70,
      70,
    ],
    Array [
      70,
      30,
    ],
    Array [
      50,
      30,
    ],
    Array [
      50,
      25,
    ],
    Array [
      75,
      25,
    ],
    Array [
      75,
      75,
    ],
    Array [
      50,
      75,
    ],
  ],
  Array [
    Array [
      50,
      50,
    ],
    Array [
      60,
      50,
    ],
    Array [
      60,
      55,
    ],
    Array [
      50,
      55,
    ],
  ],
]
`;

exports[`tesselate cut polygon 1`] = `
Array [
  Array [
    729,
  ],
]
`;

exports[`tesselate cut polygon 2`] = `
Array [
  Array [
    Array [
      Array [
        22,
        25,
      ],
      Array [
        25,
        25,
      ],
      Array [
        25,
        20,
      ],
      Array [
        22,
        20,
      ],
      Array [
        22,
        10,
      ],
      Array [
        50,
        10,
      ],
      Array [
        40,
        40,
      ],
      Array [
        22,
        46,
      ],
    ],
  ],
]
`;

exports[`tesselate cut polygon beside hole 1`] = `
Array [
  Array [
    1116,
    -25,
    -5,
    -5,
  ],
]
`;

exports[`tesselate cut polygon beside hole 2`] = `
Array [
  Array [
    Array [
      Array [
        12,
        10,
      ],
      Array [
        50,
        10,
      ],
      Array [
        40,
        40,
      ],
      Array [
        12,
        49,
      ],
    ],
    Array [
      Array [
        20,
        20,
      ],
      Array [
        20,
        25,
      ],
      Array [
        25,
        25,
      ],
      Array [
        25,
        20,
      ],
    ],
    Array [
      Array [
        18,
        20,
      ],
      Array [
        18,
        25,
      ],
      Array [
        19,
        25,
      ],
      Array [
        19,
        20,
      ],
    ],
    Array [
      Array [
        16,
        20,
      ],
      Array [
        16,
        25,
      ],
      Array [
        17,
        25,
      ],
      Array [
        17,
        20,
      ],
    ],
  ],
]
`;

exports[`tesselate cuts U 1`] = `
Array [
  Array [
    Array [
      50,
      0,
    ],
    Array [
      100,
      0,
    ],
    Array [
      100,
      25,
    ],
    Array [
      50,
      25,
    ],
  ],
  Array [
    Array [
      50,
      75,
    ],
    Array [
      100,
      75,
    ],
    Array [
      100,
      100,
    ],
    Array [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate cuts U left with multiple vertices on edge 1`] = `
Array [
  Array [
    Array [
      50,
      75,
    ],
    Array [
      100,
      75,
    ],
    Array [
      100,
      100,
    ],
    Array [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate cuts U right with multiple vertices on edge 1`] = `
Array [
  Array [
    Array [
      50,
      75,
    ],
    Array [
      100,
      75,
    ],
    Array [
      100,
      100,
    ],
    Array [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate cuts ring left 1`] = `
Array [
  Array [
    Array [
      50,
      0,
    ],
    Array [
      100,
      0,
    ],
    Array [
      100,
      100,
    ],
    Array [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate cuts ring on vertex left 1`] = `
Array [
  Array [
    Array [
      50,
      0,
    ],
    Array [
      100,
      0,
    ],
    Array [
      100,
      100,
    ],
    Array [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate cuts ring on vertex right 1`] = `
Array [
  Array [
    Array [
      50,
      100,
    ],
    Array [
      0,
      100,
    ],
    Array [
      0,
      0,
    ],
    Array [
      50,
      0,
    ],
  ],
]
`;

exports[`tesselate cuts ring right 1`] = `
Array [
  Array [
    Array [
      50,
      100,
    ],
    Array [
      0,
      100,
    ],
    Array [
      0,
      0,
    ],
    Array [
      50,
      0,
    ],
  ],
]
`;
